crates/math-core/tests/snapshots/error_test__text_in_group.snap
---
source: crates/math-core/tests/error_test.rs
expression: "{\\text}"
---
Error: Expected argument but got closing token (`}`, `\end`, `\right`).
   ╭─[ <input>:1:7 ]
   │
 1 │ {\text}
   │       ┬  
   │       ╰── expected an argument here
───╯
